--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
-Body
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Evidence</a>
+  <a href="#about">History</a>
+  <a href="#contact">Contact</a>
+  </div>
+
+  <h1>Title</h1>
+
+  <h2>Background</h2>
+  <p>Paragraph</p>
+
 </body>
 
 </html>
