Created evidence.html,contact.html, and history.html files

--- a/evidence.html
+++ b/evidence.html
@@ -3,21 +3,18 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Starting Page</title>
+<title>Contact Page</title>
 </head>
 
 <body>
   <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="evidence.html">Evidence</a>
+  <a href="index.html">Home</a>
+  <a class="active" href="evidence.html">Evidence</a>
   <a href="history.html">History</a>
   <a href="contact.html">Contact</a>
   </div>
 
-  <h1>Title</h1>
-
-  <h2>Background</h2>
-  <p>Paragraph</p>
+  <h1>Evidence</h1>
 
 </body>
 
