--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Starting Page</title>
+<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
 </head>
 
 <body>
