--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Starting Page</title>
-   <link rel="stylesheet" type="text/css" href="index.css"/>
+   <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
