--- a/evidence.html
+++ b/evidence.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact Page</title>
- <link rel="stylesheet" type="text/css" href="index.css"/>
+  <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
@@ -16,6 +16,7 @@
   </div>
 
   <h1>Evidence</h1>
+  <p>Paragraph</p>
 
 </body>
 
