--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact Page</title>
- <link rel="stylesheet" type="text/css" href="index.css"/>
+ <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
