--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact Page</title>
- <link rel="stylesheet" href="index.css"/>
+<link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
@@ -17,6 +17,8 @@
 
   <h1>History</h1>
   <p>Paragraph</p>
+
+  <h2>HELLO!!!</h2>
 </body>
 
 </html>
