--- a/evidence.html
+++ b/evidence.html
@@ -3,11 +3,18 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Contact Page</title>
+<title>Evidence</title>
 <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
+  <div class = "uniform">
+  <div class="header">
+    <p>The Chupacabra</p>
+  </div>
+  <div class="image">
+  </div>
+</div>
   <div class="topnav">
   <a href="index.html">Home</a>
   <a class="active" href="evidence.html">Evidence</a>
