--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+  <div class = "uniform">
+  <div class="header">
+    <p>The Chupacabra</p>
+  </div>
+  <div class="image">
+  </div>
+</div>
   <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="evidence.html">Evidence</a>
