--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+  <div class = "uniform">
+  <div class="header">
+    <p>The Chupacabra</p>
+  </div>
+  <div class="image">
+  </div>
+</div>
   <div class="topnav">
   <a href="index.html">Home</a>
   <a href="evidence.html">Evidence</a>
@@ -20,13 +27,15 @@
   <h2>If you have any evidence or details you would like to share, please contact us!</h2>
 
   <h3>Phone Number</h3>
-  <p>Paragraph</p>
+  <p>1-800-Chupacabra</p>
 
   <h3>Email</h3>
-  <p></p>
+  <p>chupacabra@chupacabra.org</p>
 
   <h3>Mailing Address</h3>
-  <p></p>
+  <p>666 Chupacabra Lane</p>
+  <p>Chupa,Cabra</p>
+  <p>66666</p>
 
 </body>
 
