--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Starting Page</title>
+<title>El Chupacabra</title>
    <link rel="stylesheet" href="index.css"/>
 </head>
 
@@ -22,11 +22,18 @@
   <a href="contact.html">Contact</a>
   </div>
 
-  <h1>Title</h1>
+  <h1>Welcome to our Home Page</h1>
 
-  <h2>Background</h2>
-  <p>Paragraph</p>
+  <h2>About Us</h2>
+  <p>Welcome to our website on El Chupacabra.
+     We seek to find valid and interesting evidence on the Chupacabra's existence.
+     On our site you will see real photos caught of the Chupacabra, along with other media
+     proving its existence. We also have contact information as well if you would like to send us
+     any evidence you have found. The Chupacabra is mythical to many, but we are out to prove them wrong
+     with our evidence.</p>
 
+<p class="disclosure">Disclosure: If you are from any form of government, especially the CIA, or area 52,
+   this is just a class project and none of the photes depcited are real.</p>
 </body>
 
 </html>
