Updated to correct names and added pictures and more content

--- a/a1.html
+++ b/a1.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>El Chupacabra</title>
-   <link rel="stylesheet" href="index.css"/>
+   <link rel="stylesheet" href="a1.css"/>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   </div>
 </div>
   <div class="topnav">
-  <a class="active" href="index.html">Home</a>
+  <a class="active" href="a1.html">Home</a>
   <a href="evidence.html">Evidence</a>
   <a href="history.html">History</a>
   <a href="contact.html">Contact</a>
@@ -28,12 +28,13 @@
   <p>Welcome to our website on El Chupacabra.
      We seek to find valid and interesting evidence on the Chupacabra's existence.
      On our site you will see real photos caught of the Chupacabra, along with other media
-     proving its existence. We also have contact information as well if you would like to send us
-     any evidence you have found. The Chupacabra is mythical to many, but we are out to prove them wrong
+     proving its existence.</p>
+  <p> We also have contact information as well if you would like to send us
+     any evidence you have found. Click on the Contact tab to see further information.</p>
+
+  <p>The Chupacabra is mythical to many, but we are out to prove them wrong
      with our evidence.</p>
 
-<p class="disclosure">Disclosure: If you are from any form of government, especially the CIA, or area 52,
-   this is just a class project and none of the photes depcited are real.</p>
 </body>
 
 </html>
