--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact Page</title>
- <link rel="stylesheet" href="index.css"/>
+ <link rel="stylesheet" href="a1.css"/>
 </head>
 
 <body>
@@ -14,9 +14,9 @@
   </div>
   <div class="image">
   </div>
-</div>
+  </div>
   <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="a1.html">Home</a>
   <a href="evidence.html">Evidence</a>
   <a href="history.html">History</a>
   <a class="active" href="contact.html">Contact</a>
