--- a/evidence.html
+++ b/evidence.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Evidence</title>
-<link rel="stylesheet" href="index.css"/>
+<link rel="stylesheet" href="a1.css"/>
 </head>
 
 <body>
@@ -16,16 +16,29 @@
   </div>
 </div>
   <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="a1.html">Home</a>
   <a class="active" href="evidence.html">Evidence</a>
   <a href="history.html">History</a>
   <a href="contact.html">Contact</a>
   </div>
 
   <h1>Evidence</h1>
-  <p>Paragraph</p>
+  <h2>Photos</h2>
+  <div class="evidence">
+  <img src="holly2.jpeg" alt="Evidence 2">
+  <p>Here is El Chupacabra chewing on the bones of its prey.</p>
+  <img src="holly1.jpg" alt="Evidence 1">
+  <p>Here is another photo of El Chupacabra enjoying the bones of animals it kills.</p>
+  <img src="holly3.png" alt="Evidence 3">
+  <p>Here is El Chupacabra hiding in its natural habitat, someone's armpit.</p>
+  <img src="holly4.png" alt="Evidence 4">
+  <p>Lastly, here is El Chupacabra holding onto a large stick. Investigators
+    have yet to figure out why the stick is so important to it.</p>
+  </div>
+  <h2>Videos</h2>
 
-  <h2>HELLO!!!</h2>
+  <h2>Noise clips</h2>
+
 </body>
 
 </html>
