--- a/history.html
+++ b/history.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 <meta charset="UTF-8">
 <title>History</title>
-<link rel="stylesheet" href="index.css"/>
+<link rel="stylesheet" href="a1.css"/>
 </head>
 
 <body>
@@ -17,16 +17,34 @@
 </div>
 
   <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="a1.html">Home</a>
   <a href="evidence.html">Evidence</a>
   <a class="active" href="history.html">History</a>
   <a href="contact.html">Contact</a>
   </div>
 
   <h1>History</h1>
-  <p>Paragraph</p>
+<p>Farmers in Calama,woke up totheir farm animals dead in their pens and mutilated. No one had known what or who did this.
+  Fast, a rumor spread that this creature was known as El Chupacabra.</p>
+<p>What is El Chupacabra?</p>
+<p>Many say the the Chupacabra is a mix between a vampire and lizard.
+  It has become a hot topic amongst cryptozoology.
+  Cryptozoology is the study of animals that may or may not exist.
+  No one has ever caught one of these creatures, but many have claimed to have seen it.
+  Descriptions include, bulging red eyes, fanged teeth, a reptilian body and a long tongue.</p>
+<p>Over time, the description of the Chupacabra has changed in some parts of the world and remained the same in other.
+Some new descriptions categorize the Chupacabra has a hairless dog with long fangs. This description is similar to the
+  older one, but emphasizes the creature's dog like shape.</p>
+<p>More and more evidence has been uncovered as time has passed, and we have even found evidence ourselves as we have
+  tackled to find this mystery creature. If you would like to see our evidence of our experience with the Chupacabra,
+click on our Evidence tab above.</p>
 
-  <h2>HELLO!!!</h2>
+<div class = "citation">
+  <p>Some of this information is summarized from Animal Planet's website.
+      <a href="http://www.animalplanet.com/tv-shows/lost-tapes/creatures/chupacabra-history/">Animal Planet</a></p>
+      <p>Some of this information also has been sourced from Live Science.
+      <a href="https://www.livescience.com/24036-chupacabra-facts.html">Live Science</a></p>
+</div>
 </body>
 
 </html>
